python/tests/gold/acceptancegrpcwebtest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  enable_grpc_web: True\nambassador_id: acceptancegrpcwebtest\n\n---\napiVersion: ambassador/v0\nkind: Mapping\ngrpc: True\nprefix: /echo.EchoService/\nrewrite: /echo.EchoService/\nname: acceptancegrpcwebtest-egrpc\nservice: acceptancegrpcwebtest-egrpc\nambassador_id: acceptancegrpcwebtest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  enable_grpc_web: True\\nambassador_id: acceptancegrpcwebtest\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\ngrpc: True\\nprefix: /echo.EchoService/\\nrewrite: /echo.EchoService/\\nname: acceptancegrpcwebtest-egrpc\\nservice: accep [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:58Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "acceptancegrpcwebtest",
                    "namespace": "default",
                    "resourceVersion": "14090",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest",
                    "uid": "3debe08a-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.107.90.235",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32077,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31820,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "acceptancegrpcwebtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"acceptancegrpcwebtest\",\"scope\":\"AmbassadorTest\",\"service\":\"acceptancegrpcwebtest-admin\"},\"name\":\"acceptancegrpcwebtest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"acceptancegrpcwebtest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"acceptancegrpcweb [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:58Z",
                    "labels": {
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest",
                        "service": "acceptancegrpcwebtest-admin"
                    },
                    "name": "acceptancegrpcwebtest-admin",
                    "namespace": "default",
                    "resourceVersion": "14094",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest-admin",
                    "uid": "3df6dde1-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.96.52.239",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "acceptancegrpcwebtest-admin",
                            "nodePort": 30927,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "acceptancegrpcwebtest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"acceptancegrpcwebtest\",\"scope\":\"AmbassadorTest\"},\"name\":\"acceptancegrpcwebtest-egrpc\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\":{\"ba [...]
                    },
                    "creationTimestamp": "2020-01-09T12:54:58Z",
                    "labels": {
                        "kat-ambassador-id": "acceptancegrpcwebtest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "acceptancegrpcwebtest-egrpc",
                    "namespace": "default",
                    "resourceVersion": "14101",
                    "selfLink": "/api/v1/namespaces/default/services/acceptancegrpcwebtest-egrpc",
                    "uid": "3e091dd7-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.108.179.29",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "acceptancegrpcwebtest-egrpc"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
